--- a/project.org
+++ b/project.org
@@ -42,6 +42,12 @@ This file is the agenda and project file for the Viconf project. It includes mil
 **** TODO Audit logging?
      An audit trail would be nice. Maybe for v1.0 instead.
 
+
+**** DONE Undelete area
+     CLOSED: [2018-08-09 Thu 10:53]
+     Almost all objects that are deleted still exist in the DB. An interface to undelete would be helpful.
+     This is probably a low hanging fruit.
+
 *** Provisioning improvements
 
 **** TODO Properly log all NAPALM transactions
@@ -57,3 +63,15 @@ This file is the agenda and project file for the Viconf project. It includes mil
 
 
 ** TODO Version 1.0
+
+*** General Improvements
+
+**** TODO Unit testing framework
+     We need proper unit testing to catch bugs and regressions
+
+**** TODO Frontend testing
+     I had this running on Vico, with Selenium for javascript testing. This needs to run here too.
+
+*** App improvements
+**** TODO Full API
+     Everything needs to be accessible via API
