--- a/project.org
+++ b/project.org
@@ -42,6 +42,7 @@ This file is the agenda and project file for the Viconf project. It includes mil
 **** DONE Audit logging
      CLOSED: [2018-08-09 Thu 11:03]
      An audit trail would be nice. Maybe for v1.0 instead.
+     Easyaudit has been implemented.
 
 
 **** DONE Undelete area
@@ -72,6 +73,17 @@ This file is the agenda and project file for the Viconf project. It includes mil
 
 **** TODO Frontend testing
      I had this running on Vico, with Selenium for javascript testing. This needs to run here too.
+
+
+*** Template improvements
+
+**** TODO Rewrite template handling
+     This is a rather complex idea inspired by NSO: Instead of building
+     complicated syntaxes into the templates, we should build it in to the
+     fields logic. So the template should only contain variables (including
+     lists but not more), and then the data type page should be extended to
+     allow configuration of all fields, including inventory selection, python
+     sandbox, etc. Plugins should come in here as well.
 
 *** App improvements
 **** TODO Full API
